[FIX] Some fixes, improve
Some changes to the code according to Intellij.